Add target display names and exposure graph
